# desafio_hackthon

./: .env.example  .gitignore  Byst.end App.html  Proposta Byst.end.html  README.md
PDFS/: Cópia de Violentômetro_Violências - Copia.pptx
app/: App.jsx  components.jsx  data.js  pages.jsx  styles.css
backend/: app.py  config.py  database.py  pyproject.toml
backend/models/: __init__.py  microconteudo.py  tipo_violencia.py
backend/routers/: __init__.py  busca.py  chat.py  conteudos.py
backend/schemas/: __init__.py  chat.py  conteudo.py
backend/seed/: conteudo_normalizado.curated.preview.json  conteudo_normalizado.preview.json  seed_planilha.py
backend/services/: __init__.py  gemini_client.py  guardrails.py  rag.py
docs/: 00_GOVERNANCA_DO_PROJETO.md  01_ARQUITETURA_PRODUTO.md  02_ARQUITETURA_TECNICA.md  03_IA_RESPONSAVEL.md  04_MODELO_DESENVOLVIMENTO_ASSISTIDO.md  06_CHECKPOINTS_DE_VALIDACAO.md  07_DECISOES_TECNICAS.md  09_HANDOFF.md  10_DOCUMENTACAO_DO_PRODUTO.md  11_ABORDAGEM_EDUCACIONAL_E_TEMA.md  12_MATRIZ_CONTEUDO_E_ATIVIDADES.md  13_BANCO_RASCUNHO_QUIZ_E_ATIVIDADES.md  14_VALIDACAO_MVP_ATIVIDADES.md  15_PLANO_MVP_E_DEMO.md  16_AUDITORIA_MODELOS_CHAT.md  17_CONTRATO_FRONT_BACK.md  api.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  router-types.ts  types.ts
frontend/src/components/: AvisoEducativo.tsx  Badges.tsx  BannerCanaisOficiais.tsx  CardMicroconteudo.tsx  CardTipoViolencia.tsx  CenarioCard.tsx  ChatFab.tsx  ChatMessage.tsx  ChatPanel.tsx  FeedbackEducativo.tsx  FilterChips.tsx  FonteCitada.tsx  (+12 more)
(+24 files in other folders)
